--- a/templates/charge.html.twig
+++ b/templates/charge.html.twig
@@ -4,10 +4,10 @@
 	{% if success %}
 		<h1>Successfully paid {{ currency|upper }}${{ amount }} to {{ card.type }} card ending in {{ card.last4 }}</h1>
 
-		<a class="btn btn-success" href="{{ request.basePath }}">Process another</a>
+		<a class="btn btn-success" href="{{ app.request.basePath }}">Process another</a>
 	{% else %}
 		<h1>Unable to complete transaction - {{ error }}</h1>
 
-		<a class="btn btn-primary" href="{{ request.basePath }}">Try again</a>
+		<a class="btn btn-primary" href="{{ app.request.basePath }}">Try again</a>
 	{% endif %}
 {% endblock %}
